# vinequeue

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_OLD.md  README_V2.md  batch_sender.go  benchmark_test.go  config.go  config_improved.go  config_test.go  go.mod  metrics.go  validate_config.go  vinequeue.go  vinequeue_improved.go  vinequeue_test.go  wal.go
SPEC/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  03-DATA-STRUCTURE.md  04-API-DESIGN.md  05-CHANGELOG.md  README.md
examples/basic/: go.mod  main.go
src/: config.rs  disk_queue.rs  lib.rs  queue.rs  types.rs  wal.rs
src/per_thread_queue/: core.rs  local_buffer.rs  mod.rs  processor.rs  queue_types.rs  shared.rs
tests/: batch_flush.rs  concurrent_test.rs  config_validation.rs  error_recovery_test.rs  hybrid_queue.rs  perf.rs  wal.rs
tests/helpers/: mod.rs
